--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,12 @@ The designs were created to the following widths:
 - Weights: 300, 400, 600
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
 
 :root {
     --red-desaturated: hsl(0, 36%, 70%);
     --red-soft: hsl(0, 93%, 68%);
-    --red-dark-grayish: hsl(0, 6%, 24%);
-    --gradient-one: linear-gradient(to left, hsl(0, 0, 100%), hsl(0, 100%, 98%));
-    --gradient-two: linear-gradient(to left, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    --red-dark-grayish: hsl(0, 6%, 24%);    
 }
 
 * {
@@ -37,14 +35,132 @@ The designs were created to the following widths:
 }
 
 body {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 16px;
     min-height: 100vh;
 }
 
 #wrapper {
-    background: white url(/images/bg-pattern-desktop.svg);
+    background: white url(/images/bg-pattern-desktop.svg) no-repeat left top;
+    background-size: cover;
     display: flex;
     flex-direction: column;
-    max-width: 1440px;    
-    min-height: 100em;
+    max-width: 1440px;
+    height: 100vh;
+}
+
+header {
+}
+
+#brand {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 85px;
+    padding-left: 30px;
+}
+
+#brand img {
+    height: 25px;
+}
+
+.hero {
+    height: 250px;
+    background: url(/images/hero-mobile.jpg) no-repeat center top;
+    background-size: cover;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2.title {
+    margin-top: 60px;
+    margin-bottom: 30px;
+    font-size: 38px;
+    color: var(--red-dark-grayish);
+    text-transform: uppercase;
+    width: 64%;
+    letter-spacing: 15px;
+    text-align: center;
+}
+
+h2.title span.em {
+    font-weight: 300;
+    color: var(--red-desaturated);
+}
+
+p {
+    padding: 0 35px 30px 35px;
+    text-align: center;
+    font-weight: 300;
+    line-height: 20px;
+    color: var(--red-desaturated);
+}
+
+.input-container {
+    padding: 0 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 45px;
+    width: calc(100% - 60px);
+    border: 1px solid var(--red-desaturated);
+    border-radius: 22px;
+    position: relative;
+}
+
+.btn {
+    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+}
+
+.btn:hover {    
+    background: linear-gradient(135deg, hsl(0, 100%, 98%), hsl(0, 80%, 86%));
+    cursor: pointer;
+}
+
+.input-container .btn {
+    position: absolute;
+    border:0;        
+    width: 64px;
+    border-radius: 22px;
+    height: 45px;
+    outline: none;
+    right: -2px;
+    color: white;
+    font-size: 20px;
+    line-height: 45px;
+}
+
+.input-container label {
+    display: none;
+}
+
+.input-container input[type="text"],
+.input-container input[type="email"] {    
+    border: 0;
+    background: none;
+    outline: none;
+    font-size: 14px;
+}
+
+.input-container input[type="text"]::placeholder,
+.input-container input[type="email"]::placeholder {
+    color: var(--red-desaturated);
+}
+
+.attribution {
+    margin-top: 80px;
+    font-size: 12px;
+    text-align: center;
+}
+.attribution a {
+    color: #3e52a3;
+    text-decoration: none;
+    font-weight: 700;
+}
+.attribution a:hover {
+    color: #63687e;
 }
